updates to product cat manager and handler
