# docs/swagger.yaml
@@ -5559,6 +5559,56 @@ paths:
       summary: Delete a product from a category
       tags:
       - ProductCategory
+  /rs/productCategory/list/{productId}:
+    get:
+      consumes:
+      - application/json
+      description: Get list of category IDs for a product
+      parameters:
+      - description: productId
+        in: path
+        name: productId
+        required: true
+        type: string
+      - description: apiKey required for non OAuth2 stores only
+        in: header
+        name: apiKey
+        type: string
+      - description: store name
+        in: header
+        name: storeName
+        required: true
+        type: string
+      - description: store localDomain
+        in: header
+        name: localDomain
+        required: true
+        type: string
+      - description: token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: OAuth2 client ID only for OAuth2 stores
+        in: header
+        name: clientId
+        type: string
+      - description: User ID only for OAuth2 stores
+        in: header
+        name: userId
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: integer
+            type: array
+      summary: Get list of category IDs for a product
+      tags:
+      - ProductCategory
   /rs/region/add:
     post:
       consumes:
